--- a/public/css/create_profile.css
+++ b/public/css/create_profile.css
@@ -1,10 +1,33 @@
-/* .whole {
-    display: flex;
-    flex-direction: column;
-    justify-content:space-between;
-} */
+body {
+    background-color: skyblue;
+}
+
+.icon {
+    margin: 5% 0;
+}
+
+.gender {
+    margin: 5% 0;
+}
+
+.country {
+    margin: 5% 0;
+}
+
+.prefecture {
+    margin: 5% 0;
+}
+
+.city {
+    margin: 5% 0;
+}
 
 .button {
-    margin-top: 30px;
     float: right;
+    margin-bottom: 20%;
+} 
+
+label {
+    font-weight: bold;
 }
+
