ハートマークの非同期化
いいねのハートの色の変化がどれだけ強制しても非同期化できません。リロードしたらハートの色は変わります。このアプリでいいねはそこまで重要ではないと思うのでここの課題は一旦パスさせていただきたい。

--- a/public/css/posts.index.css
+++ b/public/css/posts.index.css
@@ -11,3 +11,18 @@
 .custom-alert {
     margin-bottom: 15px; /* 他の要素とのスペースを確保 */
 }
+
+/* CSSに !important を追加してスタイルを強制適用 */
+.like-button i.far {
+    color: #657786 ; /* デフォルトの灰色 */
+}
+
+.like-button.liked i.fas {
+    color: #e0245e ; /* いいね済みの赤色 */
+}
+
+.like-button.liked i {
+    color: #e0245e ; /* いいね済みの赤色 */
+}
+
+
